# ac-race-engineer

./: .gitignore  CLAUDE.md
backend/: pyproject.toml
backend/ac_engineer/acd_reader/: __init__.py  reader.py
backend/ac_engineer/analyzer/: __init__.py  _utils.py  consistency.py  corner_analyzer.py  lap_analyzer.py  models.py  stint_analyzer.py
backend/ac_engineer/config/: __init__.py  io.py  models.py
backend/ac_engineer/engineer/: __init__.py  agents.py  conversion.py  models.py  setup_reader.py  setup_writer.py  summarizer.py  tools.py  trace.py
backend/ac_engineer/knowledge/: __init__.py  index.py  loader.py  models.py  search.py  signals.py
backend/ac_engineer/parser/: __init__.py  cache.py  corner_detector.py  lap_segmenter.py  models.py  quality_validator.py  session_parser.py  setup_parser.py
backend/ac_engineer/resolver/: __init__.py  ac_assets.py  cache.py  defaults.py  models.py  resolver.py
backend/ac_engineer/storage/: __init__.py  db.py  messages.py  models.py  recommendations.py  sessions.py  usage.py
backend/api/: __init__.py  __main__.py  deps.py  main.py  paths.py  server.py
backend/api/analysis/: __init__.py  cache.py  models.py  pipeline.py  serializers.py
backend/api/engineer/: __init__.py  cache.py  pipeline.py  serializers.py
backend/api/errors/: __init__.py  handlers.py  models.py
backend/api/jobs/: __init__.py  manager.py  models.py  worker.py
backend/api/routes/: analysis.py  cars.py  config.py  engineer.py  health.py  jobs.py  knowledge.py  sessions.py  tracks.py
backend/api/watcher/: __init__.py  handler.py  (+2 more)
(+632 files in other folders)
