[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ac-engineer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "pydantic>=2.0",
    "pydantic-ai",
    "scipy",
    "watchdog>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ac_engineer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
